--- a/Desktop/skillcrush/105-projects/adviceproject/css/steve-advice.css
+++ b/Desktop/skillcrush/105-projects/adviceproject/css/steve-advice.css
@@ -40,3 +40,13 @@ body p {
 		margin: 5px;
 		padding-left: 16px;
 }
+ footer p {font-family: 'cabin', sans-serif;
+ font-size: 12pt;
+ font-weight: 200;
+ color:blue;
+ line-height: 24px;
+ margin: 5px;
+ padding-left: 16px;
+}
+
+ }
